# webcrawl

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
crawler/: Cargo.toml
crawler/src/: error.rs  fetcher.rs  lib.rs  macros.rs  parser.rs  prelude.rs  ty.rs  url_parser.rs
crawler/tests/: smoke.rs
src/: cli.rs  error.rs  main.rs  util.rs
