[package]
name = "crawler"
version = "0.1.0"
authors = ["Jacek Całusiński <forger@forger.pl>"]
edition = "2018"

[dependencies]
failure = "0.1.5"
log = "0.4.6"
futures = "0.1.27"
reqwest = "0.9.17"
hashbrown = "0.4.0"
scraper = "0.10.0"
url = "1.7.2"

[dev-dependencies]
lazy_static = "1.3.0"
tokio = "0.1.21"
